--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,10 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
+
 android {
     namespace "com.example.news"
     compileSdk flutter.compileSdkVersion
@@ -45,16 +49,22 @@ android {
         applicationId "com.example.news"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 24
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
     buildTypes {
+        debug {
+            shrinkResources false
+            minifyEnabled false
+        }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
+            shrinkResources true
+            minifyEnabled true
             signingConfig signingConfigs.debug
         }
     }
@@ -65,13 +75,17 @@ flutter {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-analytics:21.3.0'
+    implementation 'com.google.firebase:firebase-analytics:22.0.2'
     implementation(platform("com.google.firebase:firebase-bom:33.1.2"))
 
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation("com.google.firebase:firebase-auth")
+    implementation 'com.google.firebase:firebase-auth:23.0.0'  // Example of downgrading
+
 
     // Also add the dependency for the Google Play services library and specify its version
     implementation("com.google.android.gms:play-services-auth:21.2.0")
+
+    implementation 'com.google.android.gms:play-services-measurement-api:22.0.2'
+
 }
