--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    ext.kotlin_version = '1.9.0'
+    repositories {
+        google()  // Add this line
+        mavenCentral()  // Add this line if not already present
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"// Adjust version if necessary
+        classpath 'com.google.gms:google-services:4.4.2'  // Google services plugin
+    }
+}
 allprojects {
     repositories {
         google()
@@ -16,5 +28,8 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+
+
 
 
