--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http:
   intl:
   cloud_firestore:
+  firebase_remote_config: ^3.0.7
+  json_annotation:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -67,7 +69,7 @@ flutter:
 
 
   assets:
-    - assets/images
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
